[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-tsa-wait"
version = "0.1.0"
description = "CLI to show TSA security wait times at JFK, LGA, and EWR"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
tsa-wait = "nyc_tsa_wait.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
